# weather

./: .gitignore  Cargo.toml  README.md  Trunk.toml  example.html  index.html  netlify.toml  style.css
.github/workflows/: deploy.yml
src/: lib.rs
src/api/: weather.rs
src/components/: weather_app.rs
