[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "=0.5.4", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = { version = "0.4", features = ["http"] }
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }
urlencoding = "2.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
